Kubernetes/manifests/nginxtest_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-v1
  namespace: webapps
  labels:
    app: frontend
    version: v1
    
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-frontend-v1
  template:
    metadata:
      labels:
        app: nginx-frontend-v1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
