Kubernetes/manifests/service_nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-webpage-service
spec:
  type: NodePort
  selector:
    app: test-webpage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000 # Specify the nodePort value within the range 30000-32767
