Kubernetes/manifests/test_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-webpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-webpage
  template:
    metadata:
      labels:
        app: test-webpage
    spec:
      containers:
      - name: web
        image: nginxdemos/hello
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: test-webpage-service
spec:
  type: NodePort
  selector:
    app: test-webpage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30000 # Specify the nodePort value within the range 30000-32767
